--- a/templates/datos_cliente.html
+++ b/templates/datos_cliente.html
@@ -6,21 +6,32 @@
 
 {% block contenido %}
 <section class="section">
-    <div class="columns">
-        <div class="column is-one-third">
-            <h3 class="is-size-3">Datos del Cliente</h3>
-            <!-- Agregar la imagen del cliente -->
-            <img src="{{ url_for('static', filename='fotos/' + cliente[1] + '.jpg') }}" alt="Foto del Cliente">
-        </div>
-        <div class="column">
-            <!-- Mostrar los datos del cliente a la derecha de la foto -->
-            <p><strong>Cédula:</strong> {{ cliente[1] }}</p>
-            <p><strong>Nombre:</strong> {{ cliente[2] }}</p>
-            <p><strong>Apellido:</strong> {{ cliente[3] }}</p>
-            <p><strong>Correo:</strong> {{ cliente[4] }}</p>
-            <p><strong>Teléfono:</strong> {{ cliente[5] }}</p>
-            <p><strong>Fecha de Inicio de Membresía:</strong> {{ cliente[6] }}</p>
-            <p><strong>Fecha de Fin de Membresía:</strong> {{ cliente[7] }}</p>
+    <div class="has-text-centered">
+        <h3 class="is-size-3">Datos del Cliente</h3>
+        <br>
+    </div>
+    <div class="columns is-centered">
+        <div class="column is-half">
+            <div class="box">
+                
+                <div class="columns">
+                    
+                    <div class="column is-one-third has-text-centered">
+                        <!-- Agregar la imagen del cliente -->
+                        <img src="{{ url_for('static', filename='fotos/' + cliente[1] + '.jpg') }}" alt="Foto del Cliente">
+                    </div>
+                    <div class="column">
+                        <!-- Mostrar los datos del cliente a la derecha de la foto -->
+                        <p><strong>Cédula:</strong> {{ cliente[1] }}</p>
+                        <p><strong>Nombre:</strong> {{ cliente[2] }}</p>
+                        <p><strong>Apellido:</strong> {{ cliente[3] }}</p>
+                        <p><strong>Correo:</strong> {{ cliente[4] }}</p>
+                        <p><strong>Teléfono:</strong> {{ cliente[5] }}</p>
+                        <p><strong>Fecha de Inicio de Membresía:</strong> {{ cliente[6] }}</p>
+                        <p><strong>Fecha de Fin de Membresía:</strong> {{ cliente[7] }}</p>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </section>
