--- a/templates/maestra.html
+++ b/templates/maestra.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dorians Gym - {% block titulo %}{% endblock %}</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.2/css/bulma.min.css">
+    
 </head>
 
 <body>
@@ -14,7 +15,7 @@
         <div class="navbar-brand">
             <a class="navbar-item">
                 <img alt="Logo itec"
-                    src="https://itec.edu.ec/wp-content/uploads/2023/09/logo-itec.jpg"
+                    src="https://doriansgym.com/wp-content/uploads/2022/07/logo-dorians-web.png"
                     style="max-height: 80px" />
             </a>
             <button class="navbar-burger is-warning button" aria-label="menu" aria-expanded="false"
@@ -31,9 +32,14 @@
             <div class="navbar-end">
                 <div class="navbar-item">
                     <div class="buttons">
-                        <a href="" class="button is-primary">
-                            <strong>Ayuda y soporte</strong>
-                        </a>
+                        <div class="has-text-right mb-2">
+                            <a href="{{ url_for('mostrar_clientes') }}" class="button is-primary">LISTA CLIENTES</a>
+                            <a href="{{ url_for('agregar_cliente') }}" class="button is-primary">AGREGAR CLIENTE</a>
+                            <a href="{{ url_for('mostrar_formulario_asistencia') }}" class="button is-primary">REGISTRAR ASISTENCIA</a>
+                            <a href="{{ url_for('registro_asistencias_diarias') }}" class="button is-primary">VER ASISTENCIAS DIARIAS</a>
+            
+                        </div>
+                        
                     </div>
                 </div>
             </div>
